Updating the padding spacing in the guardian spirit cards in guardian_spirits.html.

--- a/nioh2/equipment/guardian_spirits/guardian_spirits.html
+++ b/nioh2/equipment/guardian_spirits/guardian_spirits.html
@@ -341,14 +341,14 @@
             <!-- ========== ========== ==========
             Guardian Spirits Cards
             ========== ========== ========== -->
-            <div class="mt-12 px-4 lg:px-0 w-full flex flex-wrap gap-6
+            <div class="mt-12 px-2 lg:px-0 w-full flex flex-wrap gap-6
                 md:grid md:grid-cols-2
                 2xl:grid 2xl:grid-cols-3">
 
                 <!-- ========== ==========
                 Makami
                 ========== ========== -->
-                <a id="Makami" class="group w-full p-3 flex flex-col items-center justify-start gap-4 rounded-lg text-2xl bg-dark-gray hover:bg-medium-red"
+                <a id="Makami" class="group w-full py-3 px-1 lg:px-3 flex flex-col items-center justify-start gap-4 rounded-lg text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <!-- ========== Name and Logo ========== -->
                     <div class="w-full flex justify-center items-center gap-4 text-sky-400 rounded">
@@ -421,7 +421,7 @@
                 <!-- ========== ==========
                 Ame-no-Mitori
                 ========== ========== -->
-                <a id="Ame-no-Mitori" class="group w-full p-3 flex flex-col items-center justify-start gap-4 rounded-lg text-2xl bg-dark-gray hover:bg-medium-red"
+                <a id="Ame-no-Mitori" class="group w-full py-3 px-1 lg:px-3 flex flex-col items-center justify-start gap-4 rounded-lg text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <!-- ========== Name and Logo ========== -->
                     <div class="align-self-start w-full flex justify-center items-center gap-4 text-sky-400 rounded">
@@ -494,7 +494,7 @@
                 <!-- ========== ==========
                 Kagewani
                 ========== ========== -->
-                <a id="Kagewani" class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded-lg text-2xl bg-dark-gray hover:bg-medium-red"
+                <a id="Kagewani" class="group w-full py-3 px-1 lg:px-3 flex flex-col items-center justify-end gap-4 rounded-lg text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <!-- ========== Name and Logo ========== -->
                     <div class="w-full flex justify-center items-center gap-4 text-sky-400 rounded">
@@ -567,7 +567,7 @@
                 <!-- ========== ==========
                 Masaru
                 ========== ========== -->
-                <a id="Masaru" class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded-lg text-2xl bg-dark-gray hover:bg-medium-red"
+                <a id="Masaru" class="group w-full py-3 px-1 lg:px-3 flex flex-col items-center justify-end gap-4 rounded-lg text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <!-- ========== Name and Logo ========== -->
                     <div class="w-full flex justify-center items-center gap-4 text-sky-400 rounded">
@@ -643,7 +643,7 @@
                 <!-- ========== ==========
                 Shirohami
                 ========== ========== -->
-                <a id="Shirohami" class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded-lg text-2xl bg-dark-gray hover:bg-medium-red"
+                <a id="Shirohami" class="group w-full py-3 px-1 lg:px-3 flex flex-col items-center justify-end gap-4 rounded-lg text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <!-- ========== Name and Logo ========== -->
                     <div class="w-full flex justify-center items-center gap-4 text-sky-400 rounded">
@@ -719,7 +719,7 @@
                 <!-- ========== ==========
                 Rokugezo
                 ========== ========== -->
-                <a id="Rokugezo" class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded-lg text-2xl bg-dark-gray hover:bg-medium-red"
+                <a id="Rokugezo" class="group w-full py-3 px-1 lg:px-3 flex flex-col items-center justify-end gap-4 rounded-lg text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <!-- ========== Name and Logo ========== -->
                     <div class="w-full flex justify-center items-center gap-4 text-sky-400 rounded">
