Added more text to the description section in guardian_spirits.html.

--- a/nioh2/equipment/guardian_spirits/guardian_spirits.html
+++ b/nioh2/equipment/guardian_spirits/guardian_spirits.html
@@ -265,7 +265,8 @@
                 There are a total of 37 Guardian Spirits. There are 11 Spirits of the <span class="text-red-600">Brute type</span>
                 <img class="inline" src="./img/brute_logo.png" alt="">. 14 Spirits of the <span class="text-purple-500">Phantom type</span>
                 <img class="inline" src="./img/phantom_logo.png" alt="">. And 12 Spirits of the <span class="text-blue-500">Feral type</span>
-                <img class="inline" src="./img/feral_logo.png" alt="">.
+                <img class="inline" src="./img/feral_logo.png" alt="">. Below is a list of all of the Guardian Spirits and their
+                attributes. You can click on an individual Guardian Spirit to see more detail about that spirit.
             </p>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
