Updated the placement in the grid for the guaridan spirit "Amabie" in guardian_spirits.html.

--- a/nioh2/equipment/guardian_spirits/guardian_spirits.html
+++ b/nioh2/equipment/guardian_spirits/guardian_spirits.html
@@ -3019,7 +3019,7 @@
                 <!-- ========== ==========
                 Amabie
                 ========== ========== -->
-                <a id="Amabie" class="group w-full py-3 px-1 lg:px-3 flex flex-col items-center justify-end gap-4 rounded-lg text-2xl bg-dark-gray hover:bg-medium-red"
+                <a id="Amabie" class="group w-full py-3 px-1 lg:px-3 xl:col-start-2 xl:col-end-3 flex flex-col items-center justify-end gap-4 rounded-lg text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <!-- ========== Name and Logo ========== -->
                     <div class="w-full flex flex-col lg:flex-row justify-center items-center gap-4 text-sky-400 rounded">
