Updated all of the href links to the GS IDs for the main GS buttons in guardian_spirits.html.

--- a/nioh2/equipment/guardian_spirits/guardian_spirits.html
+++ b/nioh2/equipment/guardian_spirits/guardian_spirits.html
@@ -300,43 +300,43 @@
             Hot-Link for Guardian Spirits
             ========== ========== ========== -->
             <div class="w-full flex flex-wrap justify-center items-center gap-3 text-xl text-sky-400">
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Amabie</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Ame-no-Mitori</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Atlas Bear</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Baku</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Blue Dragon</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Genbu</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Gyokuto</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Hakutaku</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Hiyobishin</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Hiyokucho</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Ho</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Ho-Oh</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Inosasao</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Isanagami</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Itokuri</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Janomecho</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Kagewani</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Kurama Tengu</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Kuzunoha The Fox</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Makami</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Masaru</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Mizuchi</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Nekomata</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Nine Tails</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Oh</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Okuri-Inu</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Rokugezo</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Saoirse</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Shin-Roku</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Shirohami</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Sohaya</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Suzaku</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Tengen Kujaku</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Usura-Hicho</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Yaonami-Hime</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Yatagarasu</a>
-                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="">Yumehami</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Amabie">Amabie</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Ame-no-Mitori">Ame-no-Mitori</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Atlas_Bear">Atlas Bear</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Baku">Baku</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Blue_Dragon">Blue Dragon</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Genbu">Genbu</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Gyokuto">Gyokuto</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Hakutaku">Hakutaku</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Hiyobishin">Hiyobishin</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Hiyokucho">Hiyokucho</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Ho">Ho</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Ho-Oh">Ho-Oh</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Inosasao">Inosasao</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Isanagami">Isanagami</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Itokuri">Itokuri</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Janomecho">Janomecho</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Kagewani">Kagewani</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Kurama_Tengu">Kurama Tengu</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Kuzunoha_The_Fox">Kuzunoha The Fox</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Makami">Makami</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Masaru">Masaru</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Mizuchi">Mizuchi</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Nekomata">Nekomata</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Nine_Tails">Nine Tails</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Oh">Oh</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Okuri-Inu">Okuri-Inu</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Rokugezo">Rokugezo</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Saoirse">Saoirse</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Shin-Roku">Shin-Roku</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Shirohami">Shirohami</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Sohaya">Sohaya</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Suzaku">Suzaku</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Tengen_Kujaku">Tengen Kujaku</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Usura-Hicho">Usura-Hicho</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Yaonami-Hime">Yaonami-Hime</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Yatagarasu">Yatagarasu</a>
+                <a class="rounded-lg p-3 bg-dark-gray-2 hover:bg-light-red hover:text-yellow-400" href="#Yumehami">Yumehami</a>
             </div>
 
             <!-- ========== ========== ==========
